--- a/Resources/Private/Partials/Fields/Textfield.html
+++ b/Resources/Private/Partials/Fields/Textfield.html
@@ -15,7 +15,7 @@
                 </f:if>
             </f:then>
             <f:else>
-                <f:form.textfield property="{field.property}" class="form-control {error}" id="field-{field.property}" />
+                <f:form.textfield property="{field.property}" value="{field.value}" class="form-control {error}" id="field-{field.property}" />
             </f:else>
         </f:if>
     </div>
