--- a/Resources/Private/Backend/Templates/Mailinglist/List.html
+++ b/Resources/Private/Backend/Templates/Mailinglist/List.html
@@ -4,9 +4,14 @@
     <o:be.configuration/>
 </f:section>
 <f:section name="iconButtons">
+    <div class="left">
+        <f:link.action action="new" controller="Mailinglist" title="{f:translate(key:'LLL:EXT:openemm/Resources/Private/Language/locallang_mod.xlf:module.newMailinglist')}">
+            <span class="t3-icon fa fa-plus-square"> </span>
+        </f:link.action>
+    </div>
 </f:section>
 <f:section name="content">
-    <h1>Mailinglist list</h1>
+    <h1><f:translate key="LLL:EXT:openemm/Resources/Private/Language/locallang_mod.xlf:module.listMailinglistTitle"/></h1>
     <f:flashMessages />
     <div id="openemm-mailinglis-list_wrapper" class="dataTables_wrapper no-footer">
         <table class="table table-striped table-hover typo3-extension-list dataTable no-footer">
