[TASK] Backend Module - Mailinglist

--- a/Resources/Private/Backend/Layouts/Default.html
+++ b/Resources/Private/Backend/Layouts/Default.html
@@ -7,7 +7,7 @@
                     <div class="left">
                         <f:be.buttons.csh />
                         <f:be.menus.actionMenu>
-                            <f:be.menus.actionMenuItem label="{f:translate(key: 'LLL:EXT:openemm/Resources/Private/Language/locallang_mod.xlf:module.mailingList')}" controller="Mailinglist" action="list" />
+                            <f:be.menus.actionMenuItem label="{f:translate(key: 'LLL:EXT:openemm/Resources/Private/Language/locallang_mod.xlf:module.mailinglist')}" controller="Mailinglist" action="list" />
                         </f:be.menus.actionMenu>
                     </div>
 
@@ -18,12 +18,7 @@
                 </div>
 
                 <div class="typo3-docheader-buttons">
-                    <div class="left">
-                        <f:render section="iconButtons" />
-                    </div>
-                    <div class="right">
-                        <f:be.buttons.shortcut />
-                    </div>
+                    <f:render section="iconButtons" />
                 </div>
             </div>
             <div id="typo3-docbody">
