--- a/Resources/Private/Backend/Templates/Mailinglist/List.html
+++ b/Resources/Private/Backend/Templates/Mailinglist/List.html
@@ -5,14 +5,25 @@
 </f:section>
 <f:section name="iconButtons">
     <div class="left">
-        <f:link.action action="new" controller="Mailinglist" title="{f:translate(key:'LLL:EXT:openemm/Resources/Private/Language/locallang_mod.xlf:module.newMailinglist')}">
-            <span class="t3-icon fa fa-plus-square"> </span>
-        </f:link.action>
+        <div class="buttongroup">
+            <f:link.action action="new" controller="Mailinglist" title="{f:translate(key:'LLL:EXT:openemm/Resources/Private/Language/locallang_mod.xlf:module.newMailinglist')}">
+                <span class="t3-icon fa fa-plus-square"> </span>
+            </f:link.action>
+        </div>
+    </div>
+    <div class="right">
+        <div class="buttongroup">
+            <f:link.action action="list">
+                <span title="Refresh page" class="t3-icon fa fa-refresh"> </span>
+            </f:link.action>
+            <f:be.buttons.shortcut />
+        </div>
     </div>
 </f:section>
+
 <f:section name="content">
     <h1><f:translate key="LLL:EXT:openemm/Resources/Private/Language/locallang_mod.xlf:module.listMailinglistTitle"/></h1>
-    <f:flashMessages />
+    <f:flashMessages renderMode="div" />
     <div id="openemm-mailinglis-list_wrapper" class="dataTables_wrapper no-footer">
         <table class="table table-striped table-hover typo3-extension-list dataTable no-footer">
             <thead>
@@ -20,6 +31,7 @@
                     <th title="Id" class="sorting_asc" tabindex="0" aria-controls="openemm-mailinglis-list" rowspan="1" colspan="1" aria-label="Id" style="width: 20px;" aria-sort="ascending">Id</th>
                     <th title="Shortname" class="sorting_asc" tabindex="0" aria-controls="openemm-mailinglis-list" rowspan="1" colspan="1" aria-label="Shortname" aria-sort="ascending">Shortname</th>
                     <th title="Description" class="sorting_asc" tabindex="0" aria-controls="openemm-mailinglis-list" rowspan="1" colspan="1" aria-label="Description" aria-sort="ascending">Description</th>
+                    <th colspan="2"></th>
                 </tr>
             </thead>
             <tbody>
@@ -27,18 +39,19 @@
                     <f:for each="{items}" as="item" iteration="iter">
                         <tr>
                             <th>{item.id}</th>
-                            <th>{item.shortname}</th>
+                            <th><f:link.action action="edit" arguments="{mailinglist: item.id}">{item.shortname}</f:link.action></th>
                             <th>{item.description}</th>
-                        </tr>
-                    </f:for>
-                </f:if>
+                            <th>
+                                <div class="btn-group">
+                                    <f:link.action action="edit" arguments="{mailinglist: item.id}" class="btn btn-default t3js-record-hide">
+                                        <span class="t3-icon fa fa-pencil"> </span>
+                                    </f:link.action>
 
-                <f:if condition="{itemsO}">
-                    <f:for each="{itemsO}" as="item" iteration="iter">
-                        <tr>
-                            <th>{item.id}</th>
-                            <th>{item.shortname}</th>
-                            <th>{item.description}</th>
+                                    <f:link.action additionalAttributes="{data-title: 'Subscribe', data-message:'Diesen Datensatz tatsächlich löschen?', title:'', data-original-title:'Datensatz löschen(!)'}" action="delete" arguments="{mailinglist: item.id}" class="btn btn-default t3js-record-delete">
+                                        <o:be.icon type="trash" />
+                                    </f:link.action>
+                                </div>
+                            </th>
                         </tr>
                     </f:for>
                 </f:if>
