--- a/Resources/Private/Backend/Templates/Mailinglist/New.html
+++ b/Resources/Private/Backend/Templates/Mailinglist/New.html
@@ -6,15 +6,25 @@
 <f:section name="iconButtons">
     <div class="left">
         <div class="buttongroup">
+            <f:link.action action="list">
+                <span class="t3-icon fa fa-close"> </span>
+            </f:link.action>
+        </div>
+        <div class="buttongroup">
             <span class="t3-icon t3-icon-actions t3-icon-actions-document t3-icon-document-save">
                 <input type="image" onclick="document.getElementById('new-mailinglist-form').submit()" class="c-inputButton" name="submit" src="clear.gif" title="{f:translate(key:'LLL:EXT:openemm/Resources/Private/Language/locallang_mod.xlf:module.saveMailinglist')}" value="{f:translate(key:'LLL:EXT:openemm/Resources/Private/Language/locallang_mod.xlf:module.saveMailinglist')}">
             </span>
         </div>
     </div>
+    <div class="right">
+        <div class="buttongroup">
+            <f:be.buttons.shortcut />
+        </div>
+    </div>
 </f:section>
 <f:section name="content">
     <h1><f:translate key="LLL:EXT:openemm/Resources/Private/Language/locallang_mod.xlf:module.newMailinglistTitle"/></h1>
-    <f:flashMessages />
+    <f:flashMessages renderMode="div" />
     <f:form controller="Mailinglist" action="create" name="mailinglist" object="{mailinglist}" id="new-mailinglist-form">
     <div class="typo3-TCEforms">
         <div role="tabpanel">
